Sticky issue on screens larger then 1920px fixed, header z-index added and selection color tweaked.

--- a/src/scss/abstracts/uikit/_variables.scss
+++ b/src/scss/abstracts/uikit/_variables.scss
@@ -86,7 +86,8 @@ $base-blockquote-font-style: normal !default;
 $base-blockquote-margin-vertical: $global-gutter;
 $base-code-color: inherit;
 $base-em-color: inherit;
-$base-selection-background: $secondary;
+$base-selection-background: $global-color;
+$base-selection-color: $secondary;
 
 
 //
