--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
 	background-color: inherit;
 	padding: 0 $global-small-margin;
+	z-index: 981;
 
 	.uk-navbar-container {
 		padding: 0;
